apps/fluentbit/ingress/middleware.yaml
# Declaring the user list
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: test-auth
spec:
  basicAuth:
    realm: MyRealm
    removeHeader: true
    secret: secretName
