apps/fluentbit/ingress/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: fluentbit-ingressroute
  namespace: observability
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`fluentbit.great-demo.com`)
      services:
        - name: fluentbit-fluent-bit
          port: 2020
      middlewares:
        - name: test-auth
  tls:
    certResolver: letsencrypt
